[package]
name = "grpc_mem_bench_rust_tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.3", features = ["server"] }

[build-dependencies]
tonic-build = "0.12.3"
